# Turing-Machine

./: BackTrack.cpp  BackTrack.h  CMakeLists.txt  Inter_BinarySer.cpp  Inter_BinarySer.h  KnapasackTuring.h  KnapsackTuring.cpp  Recursive.cpp  Recursive.h  main.cpp  main_interface.ui  turing.ui  ui_main_interface.h  ui_turing.h
include/: BB_knap.h  BackTrack_knap.h  BinarySearch.h  DP_knap.h  Inter_BinarySer.h  Library.h  Memory_knap.h  QuickSort.h  Recur_BinarySer.h  Recursive.h  dp_table.h  knapsack.h  main_interface.h  recur_knapsack.h  turing.h
src/: BB_knap.cpp  BackTrack_knap.cpp  BinarySearch.cpp  DP_knap.cpp  Inter_BinarySer.cpp  Memory_knap.cpp  QuickSort.cpp  Recur_BinarySer.cpp  Recur_kanp.cpp  Recur_kanp.h  Recursive.cpp  dp_table.cpp  knapsack.cpp  main_interface.cpp  recur_knapsack.cpp  turing.cpp
ui/: dp_table.ui  knapsack.ui  main_interface.ui  recur_knapsack.ui  turing.ui  ui_dp_table.h  ui_knapsack.h  ui_main_interface.h  ui_recur_knapsack.h  ui_turing.h
